--- a/modelo.html
+++ b/modelo.html
@@ -25,5 +25,6 @@
     <footer>
         <p>&copy; ReallyArts 2021 - todos os direitos reservados</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
