--- a/modelo.html
+++ b/modelo.html
@@ -34,7 +34,7 @@
     </section>
 
     <footer>
-        <p>&copy; ReallyArts 2021 - todos os direitos reservados</p>
+        <p>&copy; RoshAlef 2021 - todos os direitos reservados</p>
     </footer>
     <script src="script.js"></script>
 </body>
