--- a/modelo.html
+++ b/modelo.html
@@ -18,9 +18,9 @@
                 <input type="number" name="txtano" id="txtano" min="0">
             </p>
             <p>SEXO:
-                <input type="radio" name="radisex" id="mas" checked>
+                <input type="radio" name="radsex" id="mas" checked>
                 <label for="mas">Masculino</label>
-                <input type="radio" name="radisex" id="fem">
+                <input type="radio" name="radsex" id="fem">
                 <label for="fem">Feminino</label>
             </p>
             <p>
